# jimmies

./: .gitignore  Cargo.toml  LICENSE  README.md  test.py
jimmies/: jimmies.py
src/: context.rs  errors.rs  lib.rs  socket.rs  stream.rs
test/: __init__.py  context.py  echo.py  socket.py  util.py
test/certs/: jimmies.local-key.pem  jimmies.local.pem  rootCA-key.pem  rootCA.pem
