[package]
name = "jimmies"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
rustls = { version = "0.17" }


[dependencies.cpython]
version = "0.5"
features = ["extension-module"]