[package]
name = "jimmies"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rustls = "0.17"
webpki = "0.21"
thiserror = "1.0"
rustls-native-certs = "0.3.0"
stderrlog = "0.4"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]